// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge accept jsx as children 1`] = `
<span
  className="css-h6dpn5"
>
  <span>
    string
  </span>
</span>
`;

exports[`Badge can have onClick event 1`] = `
<span
  className="css-6jnl7a"
  onClick={[Function]}
>
  onClick badge
</span>
`;

exports[`Badge danger 1`] = `
<span
  className="css-1rtadzi"
>
  danger
</span>
`;

exports[`Badge default 1`] = `
<span
  className="css-h6dpn5"
>
  default
</span>
`;

exports[`Badge outline 1`] = `
<span
  className="css-1itz6ao"
>
  outline
</span>
`;

exports[`Badge primary 1`] = `
<span
  className="css-12gdqng"
>
  primary
</span>
`;

exports[`Badge success 1`] = `
<span
  className="css-k4847p"
>
  success
</span>
`;

exports[`Badge warning 1`] = `
<span
  className="css-1ufo5ae"
>
  warning
</span>
`;
